# gr-hermeslite2

./: .gitignore  CMakeLists.txt  MANIFEST.md  MANIFEST.yml  README.md  license.txt
.ci_support/: linux_64_numpy1.22python3.10.____cpython.yaml  linux_64_numpy1.22python3.8.____cpython.yaml  linux_64_numpy1.22python3.9.____cpython.yaml  linux_64_numpy1.23python3.11.____cpython.yaml  linux_64_python3.10.____cpython.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____cpython.yaml  linux_aarch64_numpy1.22python3.10.____cpython.yaml  linux_aarch64_numpy1.22python3.8.____cpython.yaml  linux_aarch64_numpy1.22python3.9.____cpython.yaml  linux_aarch64_numpy1.23python3.11.____cpython.yaml  linux_aarch64_python3.10.____cpython.yaml  linux_aarch64_python3.8.____cpython.yaml  linux_aarch64_python3.9.____cpython.yaml  linux_ppc64le_numpy1.22python3.10.____cpython.yaml  linux_ppc64le_numpy1.22python3.8.____cpython.yaml  linux_ppc64le_numpy1.22python3.9.____cpython.yaml  linux_ppc64le_numpy1.23python3.11.____cpython.yaml  linux_ppc64le_python3.10.____cpython.yaml  linux_ppc64le_python3.8.____cpython.yaml  linux_ppc64le_python3.9.____cpython.yaml  osx_64_numpy1.22python3.10.____cpython.yaml  osx_64_numpy1.22python3.8.____cpython.yaml  osx_64_numpy1.22python3.9.____cpython.yaml  osx_64_numpy1.23python3.11.____cpython.yaml  osx_64_python3.10.____cpython.yaml  (+9 more)
.conda/: README.md
python/hermeslite2/bindings/: CMakeLists.txt  hermesNB_python.cc  hermesWB_python.cc  python_bindings.cc
python/hermeslite2/bindings/docstrings/: hermesNB_pydoc_template.h  hermesWB_pydoc_template.h
(+50 files in other folders)
